--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = lolin32_lite
 framework = arduino
-monitor_speed = 256000
+monitor_speed = 576000
 lib_deps = 
 	knolleary/PubSubClient@^2.8
+	plerup/EspSoftwareSerial@^6.16.1
