--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,4 @@ monitor_speed = 1000000
 ; monitor_speed = 576000
 lib_deps = 
 	knolleary/PubSubClient@^2.8
-	plerup/EspSoftwareSerial@^6.16.1
+	; plerup/EspSoftwareSerial@^6.16.1
